--- a/main.html
+++ b/main.html
@@ -24,6 +24,8 @@
                 <div class="serch">
                     <fieldset>
                         <legend>검색</legend>
+                        <input type="search">
+                        <button>검색</button>
                     </fieldset>>
                 </div>
             </div>
