--- a/main.html
+++ b/main.html
@@ -2,34 +2,74 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    
+    <link rel="stylesheet" href="./main.css">
     <title>아영이의 네이버</title>
 </head>
 <body>
     <header>
-        <div id="wrap">
-            <div class="main">
-                <div class="SmallMenu">
-                        <a href="https://help.naver.com/service/30016/contents/18042?osType=PC&lang=ko">네이버를 시작페이지로
-                            <img src="">
-                        </a>
-                        <a href="https://jr.naver.com/">쥬니어네이버</a>
-                        <a href="https://happybean.naver.com/">해피빈</a>
-                </div>
-                <div class="mainlogo">
-                    <h1>
-                        <a href="https://www.naver.com">네이버</a>
-                    </h1>
-                </div>
-                <div class="serch">
-                    <fieldset>
-                        <legend>검색</legend>
-                        <input type="search">
-                        <button>검색</button>
-                    </fieldset>>
-                </div>
-            </div>
+          <div class="main_top">
+             <div class="SmallMenu">
+                    <a href="https://help.naver.com/service/30016/contents/18042?osType=PC&lang=ko">네이버를 시작페이지로
+                        <img src="">
+                     </a>
+                     <a href="https://jr.naver.com/">쥬니어네이버</a>
+                    <a href="https://happybean.naver.com/">해피빈</a>
+               </div>
+               <div class="main">
+                   <h1 class="mainlogo">
+                      <a href="https://www.naver.com">
+                          <img src="./img/naver.logo.png" class="main_logo"/></a>
+                  </h1>
+                  <div class="serch_div">
+                   <fieldset>
+                      <legend class="serch_msg">검색</legend>
+                      <div class="serch">
+                      <input type="search">
+                      <button>검색</button>
+                      </div>
+                  </fieldset>
+                  </div>
+              </div>
+              </div>
         </div>
     </header>
+    <nav>
+        <ul>
+            <li>메일</li>
+            <li>카페</li>
+            <li>블로그</li>
+            <li>지식iN</li>
+            <li>쇼핑</li>
+            <li>쇼핑LIVE</li>
+            <li>Pay</li>
+            <li>TV</li>
+            <li>사전</li>
+            <li>뉴스</li>
+            <li>증권</li>
+            <li>부동산</li>
+            <li>지도</li>
+            <li>VIBE</li>
+            <li>도서</li>
+            <li>웹툰</li>
+        </ul>
+        <span id="see" onclick="openCloseToc()">더보기</span>
+        <div class="Dust">
+            <div class="NomalDust">
+                <ul>
+                    <li>미세</li>
+                    <li><img src="" alt="" height="18"></li>
+                    <li><b>좋음</b></li>
+                </ul>
+            </div>
+            <div class="SmallDust">
+                <ul>
+                    <li>초미세</li>
+                    <li><img src="" alt="" height="18"></li>
+                    <li><b>좋음</b></li>
+                </ul>
+            </div>
+            <div class="Dong">면목동</div>
+        </div>
+    </nav>
 </body>
 </html>
