--- a/main.html
+++ b/main.html
@@ -9,11 +9,10 @@
     <header>
           <div class="main_top">
              <div class="SmallMenu">
-                    <a href="https://help.naver.com/service/30016/contents/18042?osType=PC&lang=ko">네이버를 시작페이지로
-                        <img src="">
-                     </a>
-                     <a href="https://jr.naver.com/">쥬니어네이버</a>
-                    <a href="https://happybean.naver.com/">해피빈</a>
+                    <p id="startnaver"><a href="https://help.naver.com/service/30016/contents/18042?osType=PC&lang=ko">
+                    <img src="/img/naverstart.png"></a></p>
+                    <p id="jr_naver"><a href="https://jr.naver.com/"><img src="/img/junier.png"></a></p>
+                        <p id="happybin"><a href="https://happybean.naver.com/"><img src="/img/happy.png"></a></p>
                </div>
                <div class="main">
                    <h1 class="mainlogo">
