--- a/main.html
+++ b/main.html
@@ -33,41 +33,44 @@
         </div>
     </header>
     <nav>
-        <ul>
-            <li>메일</li>
-            <li>카페</li>
-            <li>블로그</li>
-            <li>지식iN</li>
-            <li>쇼핑</li>
-            <li>쇼핑LIVE</li>
-            <li>Pay</li>
-            <li>TV</li>
-            <li>사전</li>
-            <li>뉴스</li>
-            <li>증권</li>
-            <li>부동산</li>
-            <li>지도</li>
-            <li>VIBE</li>
-            <li>도서</li>
-            <li>웹툰</li>
-        </ul>
-        <span id="see" onclick="openCloseToc()">더보기</span>
-        <div class="Dust">
-            <div class="NomalDust">
-                <ul>
-                    <li>미세</li>
-                    <li><img src="" alt="" height="18"></li>
-                    <li><b>좋음</b></li>
-                </ul>
-            </div>
-            <div class="SmallDust">
-                <ul>
-                    <li>초미세</li>
-                    <li><img src="" alt="" height="18"></li>
-                    <li><b>좋음</b></li>
-                </ul>
-            </div>
-            <div class="Dong">면목동</div>
+        <div class="nav_ul">
+         <ul>
+             <img src="/img/mail.png" alt="">
+             <li>메일</li>
+             <li>카페</li>
+             <li>블로그</li>
+             <li>지식iN</li>
+             <li>쇼핑</li>
+             <li>쇼핑LIVE</li>
+             <li>Pay</li>
+             <li>TV</li>
+             <li>사전</li>
+             <li>뉴스</li>
+             <li>증권</li>
+             <li>부동산</li>
+             <li>지도</li>
+             <li>VIBE</li>
+             <li>도서</li>
+             <li>웹툰</li>
+         </ul>
+         <span id="see" onclick="openCloseToc()">더보기</span>
+         <div class="Dust">
+             <div class="NomalDust">
+                 <ul>
+                     <li>미세</li>
+                     <li><img src="" alt="" height="18"></li>
+                     <li><b>좋음</b></li>
+                 </ul>
+             </div>
+             <div class="SmallDust">
+                 <ul>
+                     <li>초미세</li>
+                     <li><img src="" alt="" height="18"></li>
+                     <li><b>좋음</b></li>
+                 </ul>
+             </div>
+             <div class="Dong">면목동</div>
+         </div>
         </div>
     </nav>
 </body>
