--- a/main.html
+++ b/main.html
@@ -36,24 +36,26 @@
         <div class="nav_ul">
          <ul>
              <img src="/img/mail.png" alt="">
-             <li>메일</li>
-             <li>카페</li>
-             <li>블로그</li>
-             <li>지식iN</li>
-             <li>쇼핑</li>
-             <li>쇼핑LIVE</li>
-             <li>Pay</li>
-             <li>TV</li>
-             <li>사전</li>
-             <li>뉴스</li>
-             <li>증권</li>
-             <li>부동산</li>
-             <li>지도</li>
-             <li>VIBE</li>
-             <li>도서</li>
-             <li>웹툰</li>
+             <li><a href="/">메일</a></li>
+             <li><a href="/"></a>카페</a></li>
+             <li><a href="/"></a>블로그</a></li>
+             <li><a href="/"></a>지식iN</a></li>
+             <li><a href="/"></a>쇼핑</a></li>
+             <li><a href="/"></a>쇼핑LIVE</a></li>
+             <li><a href="/"></a>Pay</a></li>
+             <li><a href="/"></a>TV</a></li>
+             <li><a href="/"></a>사전</a></li>
+             <li><a href="/"></a>뉴스</a></li>
+             <li><a href="/"></a>증권</a></li>
+             <li><a href="/"></a>부동산</a></li>
+             <li><a href="/"></a>지도</a></li>
+             <li><a href="/"></a>VIBE</a></li>
+             <li><a href="/"></a>도서</a></li>
+             <li><a href="/"></a>웹툰</a></li>
          </ul>
-         <span id="see" onclick="openCloseToc()">더보기</span>
+         <div class="More">
+            더보기<img src="" alt="" height="6">
+         </div>
          <div class="Dust">
              <div class="NomalDust">
                  <ul>
