ul합치고 nav수정

--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header>
-          <div class="main_top">
+         <div class="main_top">
              <div class="SmallMenu">
-                    <p id="startnaver"><a href="https://help.naver.com/service/30016/contents/18042?osType=PC&lang=ko">
-                    <img src="/img/naverstart.png"></a></p>
-                    <p id="jr_naver"><a href="https://jr.naver.com/"><img src="/img/junier.png"></a></p>
-                        <p id="happybin"><a href="https://happybean.naver.com/"><img src="/img/happy.png"></a></p>
+                 <p id="startnaver"><a href="https://help.naver.com/service/30016/contents/18042?osType=PC&lang=ko">
+                 <img src="/img/naverstart.png"></a></p>
+                 <p id="jr_naver"><a href="https://jr.naver.com/"><img src="/img/junier.png"></a></p>
+                 <p id="happybin"><a href="https://happybean.naver.com/"><img src="/img/happy.png"></a></p>
                </div>
                <div class="main">
                    <h1 class="mainlogo">
@@ -30,10 +30,10 @@
                   </div>
               </div>
               </div>
-        </div>
-    </header>
-    <nav>
-        <div class="nav_ul">
+         </div>
+     </header>
+     <nav>
+          <div class="nav_ul">
          <ul>
              <img src="/img/mail.png" alt="">
              <li><a href="/">메일</a></li>
@@ -52,9 +52,10 @@
              <li><a href="/"></a>VIBE</a></li>
              <li><a href="/"></a>도서</a></li>
              <li><a href="/"></a>웹툰</a></li>
+             <li>더보기<img src="" alt="" height="6">
          </ul>
          <div class="More">
-            더보기<img src="" alt="" height="6">
+            
          </div>
          <div class="Dust">
              <div class="NomalDust">
