--- a/main.html
+++ b/main.html
@@ -34,47 +34,30 @@
      </header>
      <nav>
           <div class="nav_ul">
-         <ul>
-             <img src="/img/mail.png" alt="">
+         <ul class="nav_ori">
+             <a href="/"><img src="/img/mail.png"></a>
              <li><a href="/">메일</a></li>
-             <li><a href="/"></a>카페</a></li>
-             <li><a href="/"></a>블로그</a></li>
-             <li><a href="/"></a>지식iN</a></li>
-             <li><a href="/"></a>쇼핑</a></li>
-             <li><a href="/"></a>쇼핑LIVE</a></li>
-             <li><a href="/"></a>Pay</a></li>
-             <li><a href="/"></a>TV</a></li>
-             <li><a href="/"></a>사전</a></li>
-             <li><a href="/"></a>뉴스</a></li>
-             <li><a href="/"></a>증권</a></li>
-             <li><a href="/"></a>부동산</a></li>
-             <li><a href="/"></a>지도</a></li>
-             <li><a href="/"></a>VIBE</a></li>
-             <li><a href="/"></a>도서</a></li>
-             <li><a href="/"></a>웹툰</a></li>
-             <li>더보기<img src="" alt="" height="6">
+             <li><a href="/">카페</a></li>
+             <li><a href="/">블로그</a></li>
+             <li><a href="/">지식iN</a></li>
+             <li><a href="/">쇼핑</a></li>
+             <li><a href="/"><img src="/img/shop_live.png"></a></li>
+             <li><a href="/">Pay</a></li>
+             <li><a href="/">TV</a></li>
+             <li><a href="/">사전</a></li>
+             <li><a href="/">뉴스</a></li>
+             <li><a href="/">증권</a></li>
+             <li><a href="/">부동산</a></li>
+             <li><a href="/">지도</a></li>
+             <li><a href="/">VIBE</a></li>
+             <li><a href="/">도서</a></li>
+             <li><a href="/">웹툰</a></li>
+             <li><a href="/" class="more_">더보기</a></li>
          </ul>
-         <div class="More">
-            
-         </div>
-         <div class="Dust">
-             <div class="NomalDust">
-                 <ul>
-                     <li>미세</li>
-                     <li><img src="" alt="" height="18"></li>
-                     <li><b>좋음</b></li>
-                 </ul>
-             </div>
-             <div class="SmallDust">
-                 <ul>
-                     <li>초미세</li>
-                     <li><img src="" alt="" height="18"></li>
-                     <li><b>좋음</b></li>
-                 </ul>
-             </div>
-             <div class="Dong">면목동</div>
-         </div>
-        </div>
-    </nav>
+         <ul class="serch_set">
+          <li><a href="/" class="more2"><i class="fas fa-exclamation-circle"></i>검색어 필터 설정이 필요합니다<i class="fas fa-chevron-down"></i></a></li>
+         </ul>
+      </div>
+     </nav>
 </body>
 </html>
