--- a/main.html
+++ b/main.html
@@ -63,66 +63,52 @@
         메인
      </main>
      <footer>
-        <div class="footer_list">
-            <a href="/">공지사항</a>
-            <a href="/">서비스 전체보기</a>
-        </div>
-        <div class="footer_list1">
-            <div class="fot_list1">
-                <div class="list_row">
-                    <span class="text_bold">Creators</span>
-                    <ul>
-                        <li><a href="/">크리에이터</a></li>
-                        <li><a href="/">스몰비즈니스</a></li>
-                    </ul>
-                </div>
-                <div class="list_row">
-                    <span class="text_bold">Partners</span>
-                    <ul>
-                        <li><a href="/">비즈니스 광고</a></li>
-                        <li><a href="/">스토어 개설</a></li>
-                        <li><a href="/">지역업체 등록</a></li>
-                    </ul>
-                </div>
-                <div class="list_row">
-                    <span class="text_bold">Developers</span>
-                    <ul>
-                        <li><a href="/">네이버 개발자센터</a></li>
-                        <li><a href="/">오픈API</a></li>
-                        <li><a href="/">오픈소스</a></li>
-                        <li><a href="/">네이버 D2</a></li>
-                        <li><a href="/">네이버 D2SF</a></li>
-                        <li><a href="/">네이버 랩스</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="fot_list2">
-                <div class="list_col">
-                    <div class="text_bold">웨일 브라우저</div>
-                    <div class="ac_link" ><a href="/">다운받기</a></div>      
-                    <a href="/"><img src="img/ac_img1.png" class="ac_img"/></a>     
-                </div>
-                <div class="list_col">
-                    <div class="text_bold">프로젝트 꽃</div>
-                    <div class="ac_link"><a href="/">바로가기</a></div>
-                    <a href="/"><img src="img/ac_img2.png" class="ac_img"/></a>
+        <div class="footerinner">
+                    <div class="footer_inner">
+                        <a href="/"><img src="img/area_img1.png" align="1"> <a href="/">
+                            <span style="color:#58c464; font-weight: bold;">네이버 D2SF<br></span>
+                            <span style="font-weight: bold;">신규 투자팀 모집<br></span>
+                            <br>네이버와 함께 <br>성장할 스타트업이라면? </a></a>
                     </div>
-                </div>
+                    <div class="footer_inner">
+                        <a href="/"><img src="img/area_img2.png" align="2"> 
+                            <a href="/"><span style="color:#58c464; font-weight: bold;">온스테이지 2.0<br></span>
+                            <span style="font-weight: bold;">문없는집<br></span>
+                            <br>경계와 문턱이 <br>새로워지는 밴드</a></a>
+                    </div>
+                    <div class="footer_inner">
+                        <a href="/"><img src="img/area_img3.png" align="3"> 
+                            <a href="/"><span style="color:#58c464; font-weight: bold;">소상공인의 ESG 실천방법<br></span>
+                            <span style="font-weight: bold;">이제는 가치소비 시대!<br></span>
+                            <br>MZ세대 고객으로 만들기<br>사례로 확인해 보세요</a></a>
+                    </div>
+        </div>
+        <div class="footer_down">
+            <div class="footer_down1">
+                <a href="/"><span>공지사항</span></a>
             </div>
+            <div class="footer_down2">
+                <a href="/"><span>서비스 전체보기</span></a>
             </div>
-            <div class="bottom">
-                <ul>
-                    <li><a href="/">회사소개</a></li>
-                    <li><a href="/">인재채용</a></li>
-                    <li><a href="/">제휴제안</a></li>
-                    <li><a href="/">이용약관</a></li>
-                    <li><a href="/">개인정보처리방침</a></li>
-                    <li><a href="/">청소년보호정책</a></li>
-                    <li><a href="/">네이버 정책</a></li>
-                    <li><a href="/">고객센터</a></li>
-                    <li><a href="/">&copy; NAVER Corp.</a></li>
-                </ul>
+        </div>
+        <div class="partner_box">
+            <div class="partner">
+                <span>Creators</span> <a href="#">크리에이터</a> <a href="#">스몰비즈니스</a>
             </div>
+            <div class="partner">
+                <span>Partners</span>  <a href="#">비즈니스 · 광고</a>  <a href="#">스토어 개설</a>  <a href="#">지역업체 등록</a>
+            </div>
+            <div class="partner">   
+                <span>Developers</span> <a href="#">네이버 개발자 센터</a>  <a href="#">오픈 API</a>  <a href="#">오픈소스네이버</a>
+            </div>
+                <a href="#"><img src="img/ac_img1.png"></a>
+                <a href="#"><img src="img/ac_img2.png"></a>
+        </div>
+        <div class="final">
+            <a href="#">회사소개</a> <a href="#">인재채용</a> <a href="#">제휴제안</a><a href="#">이용약관</a>
+            <a href="#">개인정보처리방침</a><a href="#">청소년보호정책</a><a href="#">네이버 정책</a>
+            <a href="#">고객센터</a><a href="#">ⓒ NAVER Corp.</a>
+        </div>
      </footer>
 </body>
 </html>
