--- a/main.html
+++ b/main.html
@@ -62,7 +62,8 @@
      <main>
         메인
      </main>
-     <footer>
+     <footer class="f1">
+        <div class="footer_">
         <div class="footerinner">
                     <div class="footer_inner">
                         <a href="/"><img src="img/area_img1.png" align="1"> <a href="/">
@@ -70,13 +71,13 @@
                             <span style="font-weight: bold;">신규 투자팀 모집<br></span>
                             <br>네이버와 함께 <br>성장할 스타트업이라면? </a></a>
                     </div>
-                    <div class="footer_inner">
+                    <div class="footer_inner" id="inner2">
                         <a href="/"><img src="img/area_img2.png" align="2"> 
                             <a href="/"><span style="color:#58c464; font-weight: bold;">온스테이지 2.0<br></span>
                             <span style="font-weight: bold;">문없는집<br></span>
                             <br>경계와 문턱이 <br>새로워지는 밴드</a></a>
                     </div>
-                    <div class="footer_inner">
+                    <div class="footer_inner" id="inner2">
                         <a href="/"><img src="img/area_img3.png" align="3"> 
                             <a href="/"><span style="color:#58c464; font-weight: bold;">소상공인의 ESG 실천방법<br></span>
                             <span style="font-weight: bold;">이제는 가치소비 시대!<br></span>
@@ -93,13 +94,19 @@
         </div>
         <div class="partner_box">
             <div class="partner">
-                <span>Creators</span> <a href="#">크리에이터</a> <a href="#">스몰비즈니스</a>
+                <span>Creators</span> 
+                <a href="#" id="partner_id">크리에이터</a> 
+                <a href="#" id="partner_id">스몰비즈니스</a>
             </div>
             <div class="partner">
-                <span>Partners</span>  <a href="#">비즈니스 · 광고</a>  <a href="#">스토어 개설</a>  <a href="#">지역업체 등록</a>
+                <span>Partners</span> 
+                <a href="#" id="partner_id">비즈니스 · 광고</a>  
+                <a href="#" id="partner_id">스토어 개설</a>  <a href="#">지역업체 등록</a>
             </div>
             <div class="partner">   
-                <span>Developers</span> <a href="#">네이버 개발자 센터</a>  <a href="#">오픈 API</a>  <a href="#">오픈소스네이버</a>
+                <span>Developers</span>
+                <a href="#" id="partner_id">네이버 개발자 센터</a> 
+                <a href="#" id="partner_id">오픈 API</a>  <a href="#">오픈소스네이버</a>
             </div>
                 <a href="#"><img src="img/ac_img1.png"></a>
                 <a href="#"><img src="img/ac_img2.png"></a>
@@ -109,6 +116,7 @@
             <a href="#">개인정보처리방침</a><a href="#">청소년보호정책</a><a href="#">네이버 정책</a>
             <a href="#">고객센터</a><a href="#">ⓒ NAVER Corp.</a>
         </div>
-     </footer>
+        </div>
+    </footer>
 </body>
 </html>
