container레이아웃분배

--- a/main.html
+++ b/main.html
@@ -60,7 +60,17 @@
       </div>
      </nav>
      <main>
-        메인
+        <div class="left">
+        <div class="left_adver"></div>
+        <div class="news stand"></div>
+        <div class="contents"></div>
+        </div>
+        <div class="right">
+            <div class="login"></div>
+            <div class="timesquare"></div>
+            <div class="right_adver"></div>
+            <div class="trandshop"></div>
+        </div>
      </main>
      <footer class="f1">
         <div class="footer_">
