--- a/main.html
+++ b/main.html
@@ -60,17 +60,36 @@
         </div>
     </nav>
     <main>
+        <div class="main_div">
         <div class="left">
-        <div class="left_adver"></div>
-        <div class="news stand"></div>
-        <div class="contents"></div>
+        <div class="left_adver">
+            <img src="/img/left_adver.png" alt="">
+        </div>
+        <div class="news_stand">
+            news stand
+            <div class="news_stand_header"> 
+            </div>
+        </div>
+        <div class="contents">
+            contents
+        </div>
         </div>
         <div class="right">
-            <div class="login"></div>
-            <div class="timesquare"></div>
-            <div class="right_adver"></div>
-            <div class="trandshop"></div>
+            right
+            <div class="login"> 
+                login
+            </div>
+            <div class="timesquare">
+                timesquare
+            </div>
+            <div class="right_adver">
+                right_adver
+            </div>
+            <div class="trandshop">
+                trandshop
+            </div>
         </div>
+    </div>
     </main>
     <footer class="f1">
         <div class="footer_">
