--- a/main.html
+++ b/main.html
@@ -66,7 +66,8 @@
             <img src="/img/left_adver.png" alt="">
         </div>
         <div class="news_stand">
-            news stand
+            <h>연합뉴스</h>
+            <p>></p>
             <div class="news_stand_header"> 
             </div>
         </div>
