--- a/main.html
+++ b/main.html
@@ -68,9 +68,11 @@
         <div class="news_stand">
             <div class="news_stand_header"> 
                 <a href="#" style="font-weight: bold;">연합뉴스</a>
+                
                 <div class="story"><i class="fas fa-angle-right"></i>오후 9시까지 전국 3만 1702명 확진...지난주의 2배 '더블링'</a></div>
                     <div class="story_link">
                         <a href="#" style="font-weight: bold; color:#3565c9">뉴스홈</a>
+                        <i style="color: #D5D5D5;">•</i>
                         <a href="#" style="font-weight: bold;">연예</a>
                         <a href="#" style="font-weight: bold;">스포츠</a>
                         <a href="#" style="font-weight: bold;">경제</a>
