--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./main.css">
     <title>아영이의 네이버</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -55,7 +56,7 @@
             <li><a href="/" class="more_">더보기</a></li>
         </ul>
         <ul class="serch_set">
-        <li><a href="/" class="more2"><i class="fas fa-exclamation-circle"></i>검색어 필터 설정이 필요합니다<i class="fas fa-chevron-down"></i></a></li>
+        <li><a href="/" class="more2"><i class="fas fa-exclamation-circle"></i>     검색어 필터 설정이 필요합니다  <i class="fas fa-chevron-down"></i></a></li>
         </ul>
         </div>
     </nav>
@@ -67,21 +68,23 @@
         </div>
         <div class="news_stand">
             <div class="news_stand_header"> 
-                <a href="#" style="font-weight: bold;">연합뉴스</a>
-                
-                <div class="story"><i class="fas fa-angle-right"></i>오후 9시까지 전국 3만 1702명 확진...지난주의 2배 '더블링'</a></div>
+                <a href="#" style="font-weight: bold;">연합뉴스   〉</a>
+                <div class="story">오후 9시까지 전국 3만 1702명 확진...지난주의 2배 '더블링'</a></div>
                     <div class="story_link">
                         <a href="#" style="font-weight: bold; color:#3565c9">뉴스홈</a>
                         <i style="color: #D5D5D5;">•</i>
                         <a href="#" style="font-weight: bold;">연예</a>
                         <a href="#" style="font-weight: bold;">스포츠</a>
-                        <a href="#" style="font-weight: bold;">경제</a>
-                        
+                        <a href="#" style="font-weight: bold;">경제</a>                       
                 </div>
             </div>
         </div>
-        <div class="contents">
-            contents
+        <div class="news_stand_content">
+            <a href="#" style="font-weight: bold;">뉴스스탠드<i class="fas fa-angle-right"></i></a>
+            <a href="#">구독한 언론사</a> <a href="#" style="font-weight: bold;">전체언론사</a>  
+            <a href="#" class="news_inter"><i class="fas fa-cog" style="color:gray;"></i></a>
+            <a href="#" class="news_inter"><i class="fas fa-grip-vertical" style="color:gray;"></i></a>
+            <a href="#" class="news_inter"><i class="fas fa-list" style="color:gray;"></i></a>
         </div>
         </div>
         <div class="right">
