--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
         </div>
         <div class="news_stand">
             <div class="news_stand_header"> 
-                <a href="#" style="font-weight: bold;">연합뉴스   〉</a>
+                <a href="#" style="font-weight: bold;">연합뉴스  <i class="fas fa-angle-right"></i></a>
                 <div class="story">오후 9시까지 전국 3만 1702명 확진...지난주의 2배 '더블링'</a></div>
                     <div class="story_link">
                         <a href="#" style="font-weight: bold; color:#3565c9">뉴스홈</a>
@@ -80,12 +80,15 @@
             </div>
         </div>
         <div class="news_stand_content">
-            <a href="#" style="font-weight: bold;">뉴스스탠드<i class="fas fa-angle-right"></i></a>
-            <a href="#">구독한 언론사</a> <a href="#" style="font-weight: bold;">전체언론사</a>  
+            <a href="#" style="font-weight: bold;">뉴스스탠드  <i class="fas fa-angle-right"></i></a>
+            <a href="#">구독한 언론사  </a><i style="color: #D5D5D5;">•</i>
+            <a href="#" style="font-weight: bold;">전체언론사  </a>  
             <a href="#" class="news_inter"><i class="fas fa-cog" style="color:gray;"></i></a>
-            
             <a href="#" class="news_inter"><i class="fas fa-grip-vertical" style="color:gray;"></i></a>
             <a href="#" class="news_inter"><i class="fas fa-list" style="color:gray;"></i></a>
+        </div>
+        <div class="news_group">       
+            <a href="#"><img src="/img/naver_news.png" onmouseover="/*this.src='/img/naver_news2.png'" onmouseout="this.src='/img/naver_news.png'" style="border: 1px solid  #e7ecf0;" ></a>
         </div>
         </div>
         <div class="right">
