--- a/main.html
+++ b/main.html
@@ -88,7 +88,7 @@
             <a href="#" class="news_inter"><i class="fas fa-list" style="color:gray;"></i></a>
         </div>
         <div class="news_group">       
-            <a href="#"><img src="/img/naver_news.png" onmouseover="/*this.src='/img/naver_news2.png'" onmouseout="this.src='/img/naver_news.png'" style="border: 1px solid  #e7ecf0;" ></a>
+            <a href="#"><img src="/img/naver_news.png" onmouseover="/*this.src='/img/naver_news2.png'*/" onmouseout="this.src='/img/naver_news.png'" style="border: 1px solid  #e7ecf0;" ></a>
         </div>
         </div>
         <div class="right">
