--- a/main.html
+++ b/main.html
@@ -39,8 +39,7 @@
             <a href="/"><img src="/img/mail.png"></a>
             <li><a href="/">메일</a></li>
             <li><a href="/">카페</a></li>
-            <li><a href="/">블로그</a></li>
-            
+            <li><a href="/">블로그</a></li>   
             <li><a href="/">지식iN</a></li>
             <li><a href="/">쇼핑</a></li>
             <li><a href="/"><img src="/img/shop_live.png"></a></li>
@@ -91,6 +90,28 @@
         </div>
         <div class="news_group">       
             <a href="#"><img src="/img/naver_news.png" onmouseover="/*this.src='/img/naver_news2.png'*/" onmouseout="this.src='/img/naver_news.png'" style="border: 1px solid  #e7ecf0;" ></a>
+        </div>
+        <div class="thema">
+            <div class="thema_title">
+                <strong style="font-size:14px; font-weight: bold;">오늘 읽을만한 글</strong>
+                <span style="font-size:12px; color:gray;">주제별로 분류된 다양한 글 모음</span>
+            </div>
+            <div class="thema_sub">
+                <span style="font-weight: bold;">2,149</span> <span style="color:gray;">  개의 글</span> 
+                <a href="#" style="color:gray;"><i class="fas fa-cog"></i></a>   관심주제 설정</a>
+            </div>
+        </div>
+        <div class="na_hel">
+            <ul id="naver_hel_ul">
+                <li><a href="/">엔터</a></li>
+                <li><a href="/">스포츠</a></li>
+                <li><a href="/">자동차</a></li>
+                <li><a href="/">웹툰</a></li>
+                <li><a href="/">경제</a></li>
+                <li><a href="/">추천·구독</a></li>
+                <li><a href="/">레시피</a></li>
+                <li><a href="/">리빙</a></li>
+            </ul>
         </div>
         </div>
         <div class="right">
