--- a/main.html
+++ b/main.html
@@ -102,17 +102,18 @@
             </div>
         </div>
         <div class="na_hel">
-            <ul id="naver_hel_ul">
-                <li><a href="/">엔터</a></li>
-                <li><a href="/">스포츠</a></li>
-                <li><a href="/">자동차</a></li>
-                <li><a href="/">웹툰</a></li>
-                <li><a href="/">경제</a></li>
-                <li><a href="/">추천·구독</a></li>
-                <li><a href="/">레시피</a></li>
-                <li><a href="/">리빙</a></li>
+            <ul id="na_hel_ul">
+                <li><a href="main.html">엔터</a></li>
+                <li><a href="main.html">스포츠</a></li>
+                <li><a href="main.html">자동차</a></li>
+                <li><a href="main.html">웹툰</a></li>
+                <li><a href="main.html">경제</a></li>
+                <li><a href="main.html">추천·구독</a></li>
+                <li><a href="main.html">레시피</a></li>
+                <li><a href="main.html">리빙</a></li>
             </ul>
         </div>
+        
         </div>
         <div class="right">
             right
