--- a/main.html
+++ b/main.html
@@ -113,7 +113,49 @@
                 <li><a href="main.html">리빙</a></li>
             </ul>
         </div>
-        
+        <div class="thema_economy">
+            <div class="thema_img1">
+                <a href="/"><img src="/img/thema_img1.png" align="1"> <a href="/">
+                    <span style="color:#58c464; font-weight: bold;">경제<br></span>
+                    <span style="font-weight: bold;">코인 대박나서 아파트 샀는데..."그게 잘못인가요?"<br></span>
+                    <br>사진=게티이미지뱅크 [텍슬리의 슬기로운 세금생활]비트코인 등 가상화폐 투자를 통해 큰 수익을 낸 투<br>자자들이 아파트 등 부동산을 사는 경우가 늘었습니다. 
+                '집을 사면 그만 아니냐'고 생각할 수 있지만 투...
+            </div>
+            <div class="thema_img2" id="thema_2">
+                < href="/"><img src="/img/thema_img2.png" align="2"> 
+                    < href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                    <span style="font-weight: bold;">강남·판교 가깝고 상권·학군 다 갖췄는데...입주폭탄에 휘청 신흥역 하늘채 랜더스원<br></span>
+                    <br>[입주단지분석] 신흥역 하늘채 랜더스윈 [땅집고] 지난 달 30일부터 경기 성남시 중원구 중앙동 '신흥역
+                    <br>하늘채 랜더스윈'이 입주를 시작했다. 이 단지는 성남시 재개발 구역인 '중1구역'에 들어선 아파트로 성...
+            </div>
+            <div class="thema_img3" id="thema_3">
+                <a href="/"><img src="/img/thema_img3.png" align="3"> 
+                    <a href="/"><span style="color:gray; font-weight: bold;">문경초농장<br></span>
+                    <span style="font-weight: bold;">문경 햇 오미자 5kg 74.900원<br></span>
+                    <br>청정지역 문경에서 재배한 햇 오미자<br>5kg 74,900원 무료배송</a></a>
+            </div>
+            <div class="thema_img4" id="thema_4">
+                <a href="/"><img src="/img/thema_img4.png" align="4"> 
+                    <a href="/"><span style="color: #58c464; font-weight: bold;">경제<br></span>
+                    <span style="font-weight: bold;">미분양이 증가한다고? 도대체 어디?<br></span>
+                    <br>대한민국에서 가장 따뜻한 '북극성부동산재테크' 네이버 카페(북극성부동산재테크 (대한민국 No.1 부동
+                    <br>산커뮤니티) : 네이버 카페 (naver.com)에서 활동하고 있는 즈믄날밤 입니다.이제 곧 9월 미분양데...</a></a>
+            </div>
+            <div class="thema_img5" id="thema_5">
+                <a href="/"><img src="/img/thema_img5.png" align="5"> 
+                    <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                    <span style="font-weight: bold;">"돈 때문에 여자들 꼬인다"...전현무, 소름돋는 재산 수준 공개되자 모두 경악했다<br></span>
+                    <br>아나운서 출신 MC인 전현무(44세)가 최근 방송에서 자신이 소유한 고가의 집과 차들을 공개해 시선이
+                    <br>집중 되었는데 이후 전현무의 수입과 재산도 밝혀져 화제가 되었습니다. 전현무가 방송에서 공개한 고...</a></a>
+            </div>
+            <div class="thema_img6" id="thema_6">
+                <a href="/"><img src="/img/thema_img6.png" align="6"> 
+                    <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                    <span style="font-weight: bold;">"운도 지지리 없지" 김광규 송도 아파트 가격 눈물나는 현재 상황<br></span>
+                    <br>집값 절반이나 폭락했다. '송도힐스테이트 3단지'재산 끌어모아서 산 첫 아파트배우 김광규가 56년만에
+                    <br>첫 아파트를 마련했다는 소식을 알리며 기뻐했지만 아파트 가격이 절반이나 뚝 떨어진 것으로 알려졌다...</a></a>
+            </div>
+        </div>
         </div>
         <div class="right">
             right
