--- a/main.html
+++ b/main.html
@@ -134,14 +134,13 @@
                     <span style="font-weight: bold;">문경 햇 오미자 5kg 74.900원<br></span>
                     <br>청정지역 문경에서 재배한 햇 오미자<br>5kg 74,900원 무료배송</a></a>
             </div>
-            <div class="thema_img4" id="thema_4">
+            <di class="thema_img4" id="thema_4">
                 <a href="/"><img src="/img/thema_img4.png" align="4"> 
                     <a href="/"><span style="color: #58c464; font-weight: bold;">경제<br></span>
                     <span style="font-weight: bold;">미분양이 증가한다고? 도대체 어디?<br></span>
                     <br>대한민국에서 가장 따뜻한 '북극성부동산재테크' 네이버 카페(북극성부동산재테크 (대한민국 No.1 부동
                     <br>산커뮤니티) : 네이버 카페 (naver.com)에서 활동하고 있는 즈믄날밤 입니다.이제 곧 9월 미분양데...</a></a>
-            </div>
-            
+            </di
             <div class="thema_img5" id="thema_5">
                 <a href="/"><img src="/img/thema_img5.png" align="5"> 
                     <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
