--- a/main.html
+++ b/main.html
@@ -161,18 +161,19 @@
         <div class="thema_economy2">
             <ul class="thema_ul2">
                 <li>
-                    <a href="/"><img src="/img/thema_img7.png"
-                    <a href="/"><span style="font-weight: bold;">카톡의 시대는 갔다? MZ세대 원픽은 '이것'<br></span></a></a>
-                    <img src="/img/thema_icon1.png">머니투데이
+                    <a href="/"><img src="/img/thema_img7.png">
+                    <a href="/"><p style="font-weight: bold;">카톡의 시대는 갔다? MZ세대 원픽은 '이것'<br></p></a></a>
+                    <p><img src="/img/thema_icon1.png">머니투데이</p>
                 </li>
                 <li>
-                    <a href="/"><img src="/img/thema_img8.png"
-                    <a href="/"><span style="font-weight: bold;">700만원 넣으면 115만원 환급?! IRP & 연금<br>저축 제발 꼭 하세요!</span></a></a>
-                    <img src="/img/thema_icon1.png">머니투데이
-                </li>                <li>
-                    <a href="/"><img src="/img/thema_img9.png"
-                    <a href="/"><span style="font-weight: bold;">"카톡의 시대는 갔다? MZ세대 원픽은 '이것'<br></span></a></a>
-                    <img src="/img/thema_icon1.png">머니투데이
+                    <a href="/"><img src="/img/thema_img8.png">
+                    <a href="/"><p style="font-weight: bold;">700만원 넣으면 115만원 환급?! IRP & 연금<br>저축 제발 꼭 하세요!</p></a></a>
+                    <p><img src="/img/thema_icon2.png">서울경제 어썸머니</p>
+                </li>                
+                <li>
+                    <a href="/"><img src="/img/thema_img9.png">
+                    <a href="/"><p style="font-weight: bold;">25살에 자산 25억 만든 진정한 영앤리치 파이<br>어족</p></a></a>
+                    <p><img src="/img/thema_icon3.png">  머니투데이</p>
                 </li>
             </ul>
         </div>
