--- a/main.html
+++ b/main.html
@@ -177,6 +177,68 @@
                 </li>
             </ul>
         </div>
+        <div class="thema_economy3">
+            <ul class="thema_ul3">
+                <li>
+                    <a href="/"><img src="/img/thema_img10.png" align="1"> 
+                        <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                        <span style="font-weight: bold;">깡통전세 공포 현실로...세입자 대처 방안은?<br></span>
+                        <br>A씨 서울에 전세살이 했지만, 보증금 못 돌려준다는 집주인"오른 금리 때문에 전세 대출금 이자가 너무<br>높아졌어요. 
+                        차라리 월세가 낫다 싶어서 이사 가려고 하는데 집주인이 보증금 돌려줄 돈이 없다네요""..."<br>경제만랩 
+                </li>
+                <li>
+                    <a href="/"><img src="/img/thema_img11.png" align="2"></a>
+                    <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                        <span style="font-weight: bold;">[부동산 인사이트] '잔치는 끝났다' 앞으로 투자 전략은?<br></span>
+                        <br>수도권은 신축 위주의 투자, 무주택자는 가점 따라 투자 방향 달라져[비즈한국] 부동산 관련 의사결정은
+                        <br>장기적인 관점으로 해야 한다. 단기적으로 의사결정을 하려는 순간, 투자는 '묻지 마 투기'로 변모할 가...<br>비즈한국
+                </li>
+                <li>
+                    <a href="/"><img src="/img/thema_img12.png" align="4"> 
+                        <a href="/"><span style="color: #58c464; font-weight: bold;">경제<br></span>
+                        <span style="font-weight: bold;">'3년 전으로 회귀?'파주 운정신도시 집값 속절없이 '뚝뚝'<br></span>
+                        <br>국토교통부가 지난 9월 조정대상지역 조정안을 발표하면서, 경기도에서는 파주·안성·평택·동두천·양주 5
+                        <br>곳을 비규제지역으로 전환했다. 이 가운데 파주의 아파트 가격이 관심을 받고 있다. 파주는 운정신도시...<br>리얼투데이
+                        </li>
+                <li>
+                    <a href="/"><img src="/img/thema_img13.png" align="3"> 
+                        <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                        <span style="font-weight: bold;">대구서 부자 소리 들으려면 얼마 있어야 할까? 대구 부자 대해부<br></span>
+                        <br>"지방에 사는 부자들이 진짜 알부자다"라는 얘기 들어보셨나요? 대한민국의 부는 서울에 집중되어 있다
+                        <br>고 생각하여 자산가들 역시 수도권에 거주할 것이라고 생각하기 쉽겠지만, 이는 잘못된 생각입니다. 자...
+                        <br>RealCast</a></a>
+                </li>
+                <li>
+                    <a href="/"><img src="/img/thema_img14.png" align="5"> 
+                        <a href="/"><span style="color:#58c464; font-weight: bold;">경제<br></span>
+                        <span style="font-weight: bold;">가난한 청춘들 ... "50만원으로 한 달 버텨요"<br></span>
+                        <br>월급 빠듯한 2030세대 고금리 고물가 '덫'에 걸려 증시·코인·부동산 피해도 신빈곤층으로 전략 우려 가<br>
+                        <br>공식품 물가 지수가 전년 대비 9.5% 상승하며 2009년 5월 이후 최대 상승률을 기록했다. 연일 물가...<br>광주일보</a></a>
+                </li>
+            </ul>
+            </div>
+            <div class="thema_economy4">
+                <ul class="thema_ul4">
+                    <li>
+                        <a href="/"><img src="/img/thema_img15.png">
+                        <a href="/"><p style="font-weight: bold;">경미한 교통사고 시 외부 충격 실험<br></p></a></a>
+                        <p><img src="/img/thema_icon4.png">매일경제 영상</p>
+                    </li>
+                    <li>
+                        <a href="/"><img src="/img/thema_img16.png">
+                        <a href="/"><p style="font-weight: bold;">경미한 교통사고시 충격을 얼마나 될까? 범퍼가<br>충돌시험으로 확인해보니</p></a></a>
+                        <p><img src="/img/thema_icon5.png">매일경제 영상</p>
+                    </li>                
+                    <li>
+                        <a href="/"><img src="/img/thema_img17.png">
+                        <a href="/"><p style="font-weight: bold;">높아지는 금리, 현금 보유가 답? 절대 아닙니<br>다!!</p></a></a>
+                        <p><img src="/img/thema_icon6.png">직방TV</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="thema_seemore">
+                <p>새로울 글 더보기</p>
+            </div>
         </div>
         <div class="right">
             right
