--- a/main.html
+++ b/main.html
@@ -241,10 +241,16 @@
             </div>
         </div>
         <div class="right">
-            right
             <div class="login"> 
-                login
-                
+                <p style="color: gray;">네이버를 더 안전하고 편리하게 이용하세요</p>
+            <div class="login_image">
+                <a href="#"><img src="/img/login.png"></a>
+            </div>            
+                <ul class="list_ul4">
+                    <a href="#"><i class="fas fa-lock" style="color:gray;"></i>  아이디</a>
+                    <a href="#">비밀번호찾기</a>
+                    <a href="#" class="create"><i class="fas fa-user-alt" style="color:gray;"></i>  회원가입</a>
+                </ul>
             </div>
             <div class="timesquare">
                 timesquare
