--- a/main.html
+++ b/main.html
@@ -252,8 +252,12 @@
                     <a href="#" class="create"><i class="fas fa-user-alt" style="color:gray;"></i>  회원가입</a>
                 </ul>
             </div>
-            <div class="timesquare">
-                timesquare
+            <div class="issue">            
+                <img src="/img/right_issue.png">
+                <a href="/"><p>코로나바이러스감염증-19현황</p></a>
+                <a href="#" class="card_li2" id="card_li2-1"><i class="fas fa-angle-right" style="color:gray;"></i></a>
+                <a href="#" class="card_li2"><i class="fas fa-angle-left" style="color:gray;"></i></a>
+                
             </div>
             <div class="right_adver">
                 right_adver
