--- a/main.html
+++ b/main.html
@@ -259,11 +259,70 @@
                 <a href="#" class="card_li2"><i class="fas fa-angle-left" style="color:gray;"></i></a>
                 
             </div>
-            <div class="right_adver">
-                right_adver
-            </div>       
-            <div class="trandshop">
-                trandshop
+            <div class="right_add">
+                <a href="#"><img src="/img/right_adver.png"></a>
+            </div>
+            <div class="shopping">
+                <a href="#" class="shopping_link1">
+                <img src="/img/right_icon.png" id="shopping_icon">트렌드쇼핑<i class="fas fa-angle-right" id="card_li2-1" style="color:gray;"></i></a>
+                <a href="#" class="shopping_link">MEN</a>
+                <a href="#" class="shopping_link" style="color:#03c75a; border-bottom: 2px solid #03c75a;">쇼핑몰</a>
+                <a href="#" class="shopping_link">상품</a>
+            </div>
+            <div class="group_shop_f">
+                <div class="group_shop">
+                    <div class="group_shop-0">
+                        <a href="#" style="font-size: 13; font-weight: bold;">벤스코리아<i class="fas fa-angle-right"></i></a>
+                        <div class="group_shop_title">
+                            1/10
+                            <a href="#"><i class="fas fa-angle-left"></i></a>
+                            <a href="#"><i class="fas fa-angle-right"></i></a>
+                        </div>
+                        <div class="group_shopping">
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list1.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list1.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list1.png"></a>
+                            <br><a href="#" style="font-size:12px; margin-left:10px;">SALE 디자인가구 BENS 최대 55% 세일중~</a>
+                            <a href="#" style="margin:18%;"><i class="fas fa-angle-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="group_shop">
+                    <div class="group_shop-0">
+                        <a href="#" style="font-size: 13; font-weight: bold;">올리브영<i class="fas fa-angle-right"></i></a>
+                        <div class="group_shop_title">
+                            1/10
+                            <a href="#"><i class="fas fa-angle-left"></i></a>
+                            <a href="#"><i class="fas fa-angle-right"></i></a>
+                        </div>
+                        <div class="group_shopping">
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list2.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list21.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list2.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list21.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list2.png"></a>
+                            <a href="#"><img src="resources/image/gallery/naver_shopping_list21.png"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="group_event">
+                <div class="group_shop-0">
+                    <a href="#" style="font-size: 13; font-weight: bold;">반갑다! 쇼핑뉴스</a>
+                    <div class="group_shop_title">
+                        1/13
+                        <a href="#"><i class="fas fa-angle-left"></i></a>
+                        <a href="#"><i class="fas fa-angle-right"></i></a>
+                    </div>
+                    <div>
+                        <li style="list-style: initial;"><a href="#"><span style="font-weight: bold;">서울샵</span> 중소기업 우수 추천상품 모음전</a></li>
+                        <li style="list-style: initial;"><a href="#"><span style="font-weight: bold;">모모케이스</span> 귀여운 폰케이스 최대 65%한정할인</a></li>
+                        <li style="list-style: initial;"><a href="#"><span style="font-weight: bold;">경북고향장터</span> 힘내라대한민국 경북농가응원하기</a></li>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
