--- a/main.html
+++ b/main.html
@@ -263,67 +263,74 @@
                 <a href="#"><img src="/img/right_adver.png"></a>
             </div>
             <div class="shopping">
-                <a href="#" class="shopping_link1">
-                <img src="/img/right_icon.png" id="shopping_icon">트렌드쇼핑<i class="fas fa-angle-right" id="card_li2-1" style="color:gray;"></i></a>
+                <img src="/img/right_icon.png">
+                <a href="#" class="shopping_link1">트렌드쇼핑
+                <i class="fas fa-angle-right" id="card_li2-1" style="color:gray;"></i></a>
                 <a href="#" class="shopping_link">MEN</a>
                 <a href="#" class="shopping_link" style="color:#03c75a; border-bottom: 2px solid #03c75a;">쇼핑몰</a>
                 <a href="#" class="shopping_link">상품</a>
             </div>
             <div class="group_shop_f">
                 <div class="group_shop">
-                    <div class="group_shop-0">
-                        <a href="#" style="font-size: 13; font-weight: bold;">벤스코리아<i class="fas fa-angle-right"></i></a>
+                    <div class="group_shop1">
                         <div class="group_shop_title">
-                            1/10
-                            <a href="#"><i class="fas fa-angle-left"></i></a>
-                            <a href="#"><i class="fas fa-angle-right"></i></a>
+                            <a href="/"><img src="/img/right_shop_icon.png"></a>                   
+                            <p id="shop_p1">1 /</p> 
+                            <p id="shop_p2">12</p>       
+                            <a href="#"><i class="fas fa-angle-right" id="shop_li2"></i></a>
+                            <a href="#"><i class="fas fa-angle-left" ></i></a>
                         </div>
                         <div class="group_shopping">
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list1.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list1.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list1.png"></a>
+                            <ul class="shopping_li1">
+                                <li>
+                                    <a href="/"><img src="/img/shop_img1.png">
+                                    <a href="/"><p style="font-weight: bold;">욕설에 감성 한스푼</p></a></a>
+                                    <p>역시14만리뷰남달라</p>
+                                </li>     
+                                <li>
+                                    <a href="/"><img src="/img/shop_img2.png">
+                                    <a href="/"><p style="font-weight: bold;">으악 피부 무슨일이야</p></a></a>
+                                    <p>깨끗한물 긴급처방~</p>
+                                </li>  
+                            </ul>
+                            <ul class="shopping_li2">
+                            <li>
+                                <a href="/"><img src="/img/shop_img3.png">
+                                <a href="/"><p style="font-weight: bold;">메탈호스그만써요</p></a></a>
+                                <p>실리콘은깨끗해요</p>
+                            </li>  
+                            <li>
+                                <a href="/"><img src="/img/shop_img4.png">
+                                <a href="/"><p style="font-weight: bold;">생수 사먹지말고</p></a></a>
+                                <p>물 끓여먹어요</p>
+                            </li>  
+                            <li>
+                                <a href="/"><img src="/img/shop_img5.png">
+                                <a href="/"><p style="font-weight: bold;">세균으로 양치해?</p></a></a>
+                                <p>말라야 완벽살균!</p>
+                            </li>  
+                            <li>
+                                <a href="/"><img src="/img/shop_img6.png">
+                                <a href="/"><p style="font-weight: bold;">요즘 원룸 필수템</p></a></a>
+                                <p>이거 하나면 뽀송</p>
+                            </li>  
+                            <li>
+                                <a href="/"><img src="/img/shop_img7.png">
+                                <a href="/"><p style="font-weight: bold;">울퉁불퉁 허벅지</p></a></a>
+                                <p>4주만 발라봐</p>
+                            </li>                             <li>
+                                <a href="/"><img src="/img/shop_img8.png">
+                                <a href="/"><p style="font-weight: bold;">아침에 일어나도</p></a></a>
+                                <p>허리 안아파요</p>
+                            </li> 
+                            </ul>
                             <br><a href="#" style="font-size:12px; margin-left:10px;">SALE 디자인가구 BENS 최대 55% 세일중~</a>
                             <a href="#" style="margin:18%;"><i class="fas fa-angle-right"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="group_shop">
-                    <div class="group_shop-0">
-                        <a href="#" style="font-size: 13; font-weight: bold;">올리브영<i class="fas fa-angle-right"></i></a>
-                        <div class="group_shop_title">
-                            1/10
-                            <a href="#"><i class="fas fa-angle-left"></i></a>
-                            <a href="#"><i class="fas fa-angle-right"></i></a>
-                        </div>
-                        <div class="group_shopping">
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list2.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list21.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list2.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list21.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list2.png"></a>
-                            <a href="#"><img src="resources/image/gallery/naver_shopping_list21.png"></a>
-                        </div>
-                    </div>
-                </div>
             </div>
-            <div class="group_event">
-                <div class="group_shop-0">
-                    <a href="#" style="font-size: 13; font-weight: bold;">반갑다! 쇼핑뉴스</a>
-                    <div class="group_shop_title">
-                        1/13
-                        <a href="#"><i class="fas fa-angle-left"></i></a>
-                        <a href="#"><i class="fas fa-angle-right"></i></a>
-                    </div>
-                    <div>
-                        <li style="list-style: initial;"><a href="#"><span style="font-weight: bold;">서울샵</span> 중소기업 우수 추천상품 모음전</a></li>
-                        <li style="list-style: initial;"><a href="#"><span style="font-weight: bold;">모모케이스</span> 귀여운 폰케이스 최대 65%한정할인</a></li>
-                        <li style="list-style: initial;"><a href="#"><span style="font-weight: bold;">경북고향장터</span> 힘내라대한민국 경북농가응원하기</a></li>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
     </main>
