--- a/main.html
+++ b/main.html
@@ -324,8 +324,18 @@
                                 <p>허리 안아파요</p>
                             </li> 
                             </ul>
-                            <br><a href="#" style="font-size:12px; margin-left:10px;">SALE 디자인가구 BENS 최대 55% 세일중~</a>
-                            <a href="#" style="margin:18%;"><i class="fas fa-angle-right"></i></a>
+                            <div class="shop_bottom1">
+                                <a href="#" style="font-size:13px; color: red; font-weight: bold;">신상특가</a>
+                                <p>｜ 첫구매 회원 5,000원 쿠폰 증정!</p>
+                                <a href="#"><i class="fas fa-angle-right" style="float:right;"></i></a>
+                            </div>
+                            <div class="shop_bottom2">
+                                <a href="#"><i class="fas fa-angle-left" ></i></a>
+                                <p>5</p>
+                                <p> / 12</p>
+                                <a href="#"><i class="fas fa-angle-right"></i></a>  
+                            </div>
+                            </div>
                         </div>
                     </div>
                 </div>
