--- a/main.html
+++ b/main.html
@@ -331,7 +331,7 @@
                             </div>
                             <div class="shop_bottom2">
                                 <a href="#"><i class="fas fa-angle-left" ></i></a>
-                                <p>5</p>
+                                <p style="margin-left: 140px;">5</p>
                                 <p> / 12</p>
                                 <a href="#"><i class="fas fa-angle-right"></i></a>  
                             </div>
