shop_bottom2_end

--- a/main.html
+++ b/main.html
@@ -330,9 +330,9 @@
                                 <a href="#"><i class="fas fa-angle-right" style="float:right;"></i></a>
                             </div>
                             <div class="shop_bottom2">
-                                <a href="#"><i class="fas fa-angle-left" ></i></a>
-                                <p style="margin-left: 140px;">5</p>
-                                <p> / 12</p>
+                                <a href="#"><i class="fas fa-angle-left" style="float: left; margin-left: 120px;" ></i></a>
+                                <p id="shop_bottom_p1">5</p>
+                                <p id="shop_bottom_p2"> / 12</p>
                                 <a href="#"><i class="fas fa-angle-right"></i></a>  
                             </div>
                             </div>
